[package]
name = "human-repr"
version = "1.0.1"
edition = "2021"

authors = ["Rogério Sampaio de Almeida <rsalmei@gmail.com>"]
description = "Generate beautiful human representations of bytes, durations and even throughputs!"
keywords = ["format", "convert", "bytes", "duration", "throughput"]
categories = ["value-formatting", "date-and-time"]
documentation = "https://docs.rs/human-repr/"
repository = "https://github.com/rsalmei/human-repr"
readme = "README.md"
license = "MIT"

[dependencies]

[features]
1024 = []
iec = ["1024"]
space = []

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "counts"
harness = false
[[bench]]
name = "durations"
harness = false
[[bench]]
name = "throughputs"
harness = false
